--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Gallery</title>
+    <title>Form</title>
   </head>
   <body>
     <a href="./index.html">Go back</a>
 
-    <ul class="gallery"></ul>
-
-    <script type="module" src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
