--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>JS HW 9</title>
+    <title>JS HW 10</title>
   </head>
   <body>
     <ul class="nav-list">
-      <li class="nav-item"><a href="./1-gallery.html">Gallery</a></li>
-      <li class="nav-item"><a href="./2-form.html">Form</a></li>
+      <li class="nav-item"><a href="./1-timer.html">Timer</a></li>
+      <li class="nav-item"><a href="./2-snackbar.html">Snackbar</a></li>
     </ul>
   </body>
 </html>
