--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,10 +7,10 @@
     <title>Gallery</title>
   </head>
   <body>
-    <a href="./index.html">Go back</a>
+    <a href="./index.html" class="nav-link">Go back</a>
 
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <button type="button" class="timer-btn" data-start>Start</button>
 
     <div class="timer">
       <div class="field">
