--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -8,6 +8,26 @@
   </head>
   <body>
     <a href="./index.html">Go back</a>
+    <form class="form">
+      <label class="form-label">
+        Delay (ms)
+        <input type="number" name="delay" required />
+      </label>
+
+      <fieldset>
+        <legend>State</legend>
+        <label class="radio-label">
+          <input type="radio" name="state" value="fulfilled" required />
+          Fulfilled
+        </label>
+        <label class="radio-label">
+          <input type="radio" name="state" value="rejected" required />
+          Rejected
+        </label>
+      </fieldset>
+
+      <button class="submit-btn" type="submit">Create notification</button>
+    </form>
 
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
